<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content_list_meetings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meeting_list.MeetingListActivity">

    <!-- Main content -->


        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_description_addMeeting"
        app:srcCompat="@drawable/ic_add_white_24dp"
        app:tint="@color/white"
        app:backgroundTint="@color/red"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meeting_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_meeting_list"/>



...
