<resources>
    <string name="app_name">Ma réu</string>

    <string name="content_description_addMeeting">Ajouter une réunion</string>
    <string name="content_description_createMeeting">créer une réunion</string>

    <!-- For Spinner , in screen create a new meeting - list of the rooms  / not use -->
    <!-- For unit test - list of the rooms  / use -->
    <string-array name="list_of_meeting_rooms">
        <item>Salle 1</item>
        <item>Salle 2</item>
...
